# ether-cli

./: Cargo.toml  README.md
schema/: cli-schema.json
src/: main.rs
